updated fetchFormData.js and capture_imgs.js

--- a/fetchFormData.html
+++ b/fetchFormData.html
@@ -2,12 +2,12 @@
 <html>
   <head></head>
   <body>
-    <h2 style="display: flex; justify-content : center;">BugZilla</h2>
-    <div style="width: 300px;">
-      <div style="display: flex;">
+    <h2 style="display: flex; justify-content: center">BugZilla</h2>
+    <div style="width: 300px">
+      <div style="display: flex">
         <ul>
           <li><b>Summary</b> : <span id="summary"></span></li>
-          <li><b>Product</b> : <span id="product_label"></span> </li>
+          <li><b>Product</b> : <span id="product_label"></span></li>
           <li><b>Description</b> : <span id="description"></span></li>
           <li><b>Version</b> : <span id="version_select"></span></li>
           <li><b>Bug Type</b> : <span id="bug_type"></span></li>
@@ -18,6 +18,6 @@
       </div>
       <!-- <button id="test">Fetch</button> -->
     </div>
-    <script src="popup.js"></script>
+    <script src="fetchFormData.js"></script>
   </body>
 </html>
