resolved ss capture code

--- a/fetchFormData.html
+++ b/fetchFormData.html
@@ -15,9 +15,12 @@
           <li><b>Hardware</b> : <span id="hardware"></span></li>
           <li><b>OS</b> : <span id="os"></span></li>
         </ul>
+        <br>
       </div>
+      <button id="capture_image">Capture Image</button>
       <!-- <button id="test">Fetch</button> -->
     </div>
     <script src="fetchFormData.js"></script>
+    <script src="capture_imgs.js"></script>
   </body>
 </html>
