--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Customer styling for popup modal -->
-    <link rel="stylesheet" href="/css/popup.css">
+    <link rel="stylesheet" href="./css/popup.css">
     <!-- Font awesome icons cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -19,7 +19,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h4 class="modal-title">ExinesLab RecSys Notification</h4>
-          <button type="button" class="close" aria-label="Close Get Email Notifications modal"
+          <button type="button" class="close close_button" aria-label="Close Get Email Notifications modal"
             data-dismiss="modal">×</button>
         </div>
         <div class="modal-body">
@@ -34,11 +34,12 @@
             excepturi corporis?
           </p>
           <!-- Terms to use for improving accuracy of prediction -->
-          <div class="terms-of-use-container border-top">
+          <div class="terms-of-use-container border-top " style="padding-bottom: 10px;">
             <a href="#" id="terms-link" data-toggle="collapse">Terms of Use
-              <i class="fa fa-chevron-down rotate" aria-hidden="true"></i>
+              <i id="terms_chev" class="fa fa-chevron-down rotate" aria-hidden="true"></i>
+
             </a>
-            <div class="collapse" id="termsOfUseContent">
+            <div class="collapse element"  id="termsOfUseContent">
               <p>Before reporting a bug, make sure you've read our bug writing guidelines:</p>
               <p>(1) Enter a clear unique summary with detailed description to reproduce the issue</p>
               <p>(2) Select all the fields appropriately to report a bug </p>
@@ -46,10 +47,9 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" id="subscription-submit" class="btn btn-primary">Close</button>
+          <button type="button" id="subscription-submit" class="btn btn-primary close_button">Close</button>
         </div>
       </div>
     </div>
   </body>
-
 </html>
