updated final version of recommender message and logo

--- a/client/fetchFormData.html
+++ b/client/fetchFormData.html
@@ -16,7 +16,7 @@
     <div class="modal-popup">
       <div class="modal-header">
         <img class="modal-logo" src="/assets/icon-16.png" alt="logo">
-        <h5 class="modal-title">ExinesLab RecSys for Bugzilla</h5>
+        <h5 class="modal-title">ImageR for Bug reports</h5>
         <button type="button" class="close" aria-label="Close Get Email Notifications modal"
           data-dismiss="modal">×</button>
       </div>
