--- a/client/popup.html
+++ b/client/popup.html
@@ -18,28 +18,29 @@
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title">ExinesLab RecSys Notification</h4>
+          <h4 class="modal-title">ImageR System Notification</h4>
           <button type="button" class="close close_button" aria-label="Close Get Email Notifications modal"
             data-dismiss="modal">×</button>
         </div>
         <div class="modal-body">
           <!-- Recommender class labels -->
-          <h5 class="recommender-label">["Code: 84%", "Run Time Error: 72%", "Dialog Box: 55%"]</h5>
+          <!-- <h5 class="recommender-label">["Code: 84%", "Run Time Error: 72%", "Dialog Box: 55%"]</h5> -->
+
           <!-- Recommender body message -->
-          <p class="recommender-body">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab facilis ipsum, et explicabo commodi error
-            dolore ratione velit atque natus saepe voluptatem, perferendis repellendus numquam consequatur libero
-            quaerat unde sit! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda iusto voluptatum
-            eligendi, fugit explicabo est quo veniam blanditiis in dicta alias commodi et quis nostrum, sed harum cum
-            excepturi corporis?
-          </p>
+          <p class="recommender-body"> Please consider attaching the below type of images if available to your bug
+            report:</p>
+          <p class="recommender-body">1) Code (84% relevance) </p>
+          <p class="recommender-body">2) Run Time Error (72% relevance)</p>
+          <p class="recommender-body">3) Dialog Box (68% relevance)</p>
+          <p class="recommender-body">We predict this will help in triaging and responding to your report.</p>
+
           <!-- Terms to use for improving accuracy of prediction -->
           <div class="terms-of-use-container border-top " style="padding-bottom: 10px;">
             <a href="#" id="terms-link" data-toggle="collapse">Terms of Use
               <i id="terms_chev" class="fa fa-chevron-down rotate" aria-hidden="true"></i>
 
             </a>
-            <div class="collapse element"  id="termsOfUseContent">
+            <div class="collapse element" id="termsOfUseContent">
               <p>Before reporting a bug, make sure you've read our bug writing guidelines:</p>
               <p>(1) Enter a clear unique summary with detailed description to reproduce the issue</p>
               <p>(2) Select all the fields appropriately to report a bug </p>
@@ -52,4 +53,5 @@
       </div>
     </div>
   </body>
+
 </html>
