added javascript fetch for POST method

--- a/client/popup.html
+++ b/client/popup.html
@@ -29,9 +29,11 @@
           <!-- Recommender body message -->
           <p class="recommender-body"> Please consider attaching the below type of images if available to your bug
             report:</p>
-          <p class="recommender-body">1) Code (84% relevance) </p>
-          <p class="recommender-body">2) Run Time Error (72% relevance)</p>
-          <p class="recommender-body">3) Dialog Box (68% relevance)</p>
+
+          <div id="results">
+            <!-- <p class="recommender-body">1) Code (84% relevance) </p> -->
+          </div>
+          
           <p class="recommender-body">We predict this will help in triaging and responding to your report.</p>
 
           <!-- Terms to use for improving accuracy of prediction -->
