--- a/client/popup.html
+++ b/client/popup.html
@@ -27,14 +27,20 @@
           <!-- <h5 class="recommender-label">["Code: 84%", "Run Time Error: 72%", "Dialog Box: 55%"]</h5> -->
 
           <!-- Recommender body message -->
-          <p class="recommender-body"> Please consider attaching the below type of images if available to your bug
-            report:</p>
-
-          <div id="results">
-            <!-- <p class="recommender-body">1) Code (84% relevance) </p> -->
+          <div id="success">
+            <p class="recommender-body"> Please consider attaching the below type of images if available to your bug
+              report:</p>
+  
+            <div id="results">
+              <!-- <p class="recommender-body">1) Code (84% relevance) </p> -->
+            </div>
+            
+            <p class="recommender-body">We predict this will help in triaging and responding to your report.</p>
           </div>
-          
-          <p class="recommender-body">We predict this will help in triaging and responding to your report.</p>
+
+          <div id="no_image_needed" class="d-flex justify-content-center">
+
+          </div>
 
           <!-- Terms to use for improving accuracy of prediction -->
           <div class="terms-of-use-container border-top " style="padding-bottom: 10px;">
